# SkillMash

./: .env.example  .gitignore  AGENTS.md  README.md  build.py  pyproject.toml  run_ui.py  service.py  skillmash_demo.py  ui.py  设计说明书.md
docs/: skill-orchestration-n-plus-one-views.md  skill-orchestration-system-design.md
docs/modules/: offline-graph-construction.md  offline-representation-extraction.md  online-execution.md  online-orchestration-retrieval.md  online-pruning-ranking.md  orchestration-forward-planning.md
examples/: graph_build_demo.py  graph_online_demo.py  representation_extraction_demo.py
skillmash/: __init__.py
skillmash/common/: __init__.py  llm.py
skillmash/core/: __init__.py  decomposer.py  graph.py  matcher.py  models.py  planner.py  registry.py  scoring.py  serialization.py
skillmash/graph/: AGENTS.md  __init__.py  builder.py  candidates.py  feedback.py  index.py  matcher.py  models.py  pipeline.py  registry.py  relation_resolution.py  writer.py
skillmash/interfaces/: __init__.py  api.py  ui_server.py
skillmash/lexicon/: __init__.py  artifact_lexicon.py
skillmash/orchestration/: AGENTS.md  __init__.py  artifacts.py  planner.py
skills/: skills_index.json
tests/: test_candidate_debug.py  test_core.py  test_graph.py  test_grounding.py  test_lexicon.py  test_lexicon_tokenization.py  test_orchestration_planner.py  test_plan_reranker.py  test_relation_feedback.py  test_representation.py  test_representation_deliverable_outputs.py  test_ui.py
tools/: apply_relation_feedback.py  download.py
ui/: index.html  serve.py
(+60 files in other folders)
