[project]
name = "skillmash"
version = "0.1.0"
description = "Skill graph and orchestration prototype for Agent skills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "openai>=1.0.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.46.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
