[project]
name = "skillmash"
version = "0.1.0"
description = "Skill graph and orchestration prototype for Agent skills."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.136.1",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0,<9; python_version < '3.10'",
    "pytest>=9.0.3; python_version >= '3.10'",
    "pyyaml>=6.0.3",
    "rich>=13.7.0",
    "uvicorn[standard]>=0.46.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
